# TableLinker

./: .gitattributes  .gitignore  README.md  buildspec.yml  docker-compose.build.yml  docker-compose.yml  nginx.conf  package.json  settings.json
api/: .dockerignore  .env.aws  .flake8  .gitignore  .isort.cfg  .mypy.ini  Dockerfile  README.md  index.js  initdb.sh  poetry.lock-aarm64  poetry.lock-x64  pyproject.toml  tox.ini
api/tablelinker/: setup_transformer.py
api/tablelinker/config/: __init__.py  celery.py  json_encodor.py  settings.py  test_settings.py  urls.py  wsgi.py
api/tablelinker/convertors/celery/: __init__.py  runner.py  tasks.py
api/tablelinker/convertors/core/: __init__.py  core.py  filters.py  input.py  loader.py  output.py  params.py  proxy.py  validators.py
api/tablelinker/customs/basics/: __init__.py  calc_col.py  concat_col.py  delete_col.py  delete_row.py  geocoder.py  insert_col.py  move_col.py  mtab.py  rename_col.py  split_col.py  (+4 more)
api/tablelinker/dataset_convertors/: apis.py  apps.py  convertor_extends.py  router.py  serializers.py  urls.py  views.py
api/tablelinker/dataset_templates/: admin.py  apis.py  apps.py  models.py  router.py  serializers.py  tests.py  urls.py  views.py
api/tablelinker/datasets/: admin.py  forms.py  router.py  tasks.py  urls.py  views.py
api/tablelinker/graphql_schema/: root_schema.py  tests.py
api/tablelinker/mapping/: column_name.yml  wikidata.yml
api/tablelinker/mtab/: mtab.py
api/tablelinker/shared/: cipher.py  csv_cleaner.py  forms.py  models.py  permissions.py  utils.py
api/tablelinker/users/: admin.py  apis.py  factory.py  forms.py  models.py  router.py  serializers.py  urls.py  views.py
(+457 files in other folders)
